# marvelous-databricks-course-Marty-Hofstra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  databricks.yml  project_config.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
notebooks/: create_alerts.py  create_databricks_secrets.py  create_synthetic_data.py
src/: data_processor.py
src/data_processing/: data_processor.py
src/data_processing/workflows/: data_processing_task.py
src/hotel_reservations/: utils.py
src/hotel_reservations/data_processing/: data_processor.py
src/hotel_reservations/data_processing/workflows/: data_processing_task.py
src/hotel_reservations/featurisation/: featurisation.py
src/hotel_reservations/featurisation/workflows/: featurisation_task.py
src/hotel_reservations/models/: custom_model.py  model.py
src/hotel_reservations/models/workflows/: basic_model.py  basic_model_task.py  custom_model_task.py  evaluate_model_task.py  fe_model_task.py  train_model_task.py
src/hotel_reservations/monitoring/: monitoring.py
src/hotel_reservations/monitoring/workflows/: predict_monitor.py
src/hotel_reservations/serving/: serving.py
src/hotel_reservations/serving/workflows/: feature_serving.py  (+1 more)
src/hotel_reservations/types/: project_config_types.py
test/: test_data_processor.py  test_featurisation.py  test_utils.py  utils.py
test/data_processing/: test_data_processor.py
test/featurisation/: test_featurisation.py
test/model/: test_model.py
test/monitoring/: test_monitoring.py
test/serving/: test_serving.py
